sfSandBoxCode/force-app/main/default/objects/Employee_Banking_Information__c/Employee_Banking_Information__c.object-meta.xml
<CustomObject>
    <description>Employee Banking Information</description>
    <label>Employee Banking Information</label>
    <nameField>
        <displayFormat>BI-{000000}</displayFormat>
        <label>Employee Banking Information Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Employee Banking Information</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>