sfSandBoxCode/force-app/main/default/objects/Employee_Banking_Information__c/fields/BI_Bank_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>BI_Bank_Account_Number__c</fullName>
    <description>BI Bank Account Number</description>
    <inlineHelpText>BI Bank Account Number</inlineHelpText>
    <label>BI Bank Account Number</label>
    <length>140</length>
    <required>true</required>
    <type>Text</type>
</CustomField>