sfSandBoxCode/force-app/main/default/objects/Employee_Banking_Information__c/fields/BI_Bank_Branch__c.field-meta.xml
<CustomField>
    <fullName>BI_Bank_Branch__c</fullName>
    <description>BI Bank Branch</description>
    <inlineHelpText>BI Bank Branch</inlineHelpText>
    <label>BI Bank Branch</label>
    <length>140</length>
    <required>true</required>
    <type>Text</type>
</CustomField>