sfSandBoxCode/force-app/main/default/objects/Employee_Banking_Information__c/fields/BI_Bank_Name__c.field-meta.xml
<CustomField>
    <fullName>BI_Bank_Name__c</fullName>
    <description>BI Bank Name</description>
    <inlineHelpText>BI Bank Name</inlineHelpText>
    <label>BI Bank Name</label>
    <length>140</length>
    <required>true</required>
    <type>Text</type>
</CustomField>