sfSandBoxCode/force-app/main/default/objects/Employee_Banking_Information__c/fields/BI_Bank_Title__c.field-meta.xml
<CustomField>
    <fullName>BI_Bank_Title__c</fullName>
    <description>BI Bank Title</description>
    <inlineHelpText>BI Bank Title</inlineHelpText>
    <label>BI Bank Title</label>
    <length>140</length>
    <required>true</required>
    <type>Text</type>
</CustomField>