sfSandBoxCode/force-app/main/default/objects/Employee_Banking_Information__c/fields/BI_Comments__c.field-meta.xml
<CustomField>
    <fullName>BI_Comments__c</fullName>
    <description>BI Comments</description>
    <inlineHelpText>BI Comments</inlineHelpText>
    <label>BI Comments</label>
    <length>140</length>
    <type>Text</type>
</CustomField>