sfSandBoxCode/force-app/main/default/objects/Employee_Banking_Information__c/fields/BI_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>BI_Effective_Date__c</fullName>
    <description>BI Effective Date</description>
    <inlineHelpText>BI Effective Date</inlineHelpText>
    <label>BI Effective Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>