sfSandBoxCode/force-app/main/default/objects/Employee_Banking_Information__c/fields/Current_Bank_Account__c.field-meta.xml
<CustomField>
    <fullName>Current_Bank_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Current Bank Account Record?</description>
    <inlineHelpText>Current Bank Account Record?</inlineHelpText>
    <label>Current Bank Account</label>
    <type>Checkbox</type>
</CustomField>